# alfred

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  result  spec.md
.claude/: settings.local.json
resources/: NaCl_POSCAR  V4C3.vasp  atoms.json
src/: camera.rs  main.rs  scene.rs
src/analysis/: magnetic.rs  marching_cubes.rs  mod.rs  symmetry.rs
src/data/: elements.rs  mod.rs  structure.rs  volume.rs
src/io/: mod.rs  poscar.rs  volumetric.rs
src/io/vasprun/: mod.rs
src/io/vasprun/parser/: atominfo.rs  calculation.rs  dielectric.rs  dos.rs  eigenvalues.rs  helpers.rs  incar.rs  kpoints.rs  mod.rs  structure.rs
src/ui/: atom_info.rs  info_panel.rs  menu.rs  mod.rs  vasprun_panel.rs
src/vis/: arrows.rs  atoms.rs  axes_gizmo.rs  axis_indicator.rs  isosurface.rs  ldos_coloring.rs  mirror_plane.rs  mod.rs  selection.rs  symmetry_anim.rs  unit_cell.rs  wyckoff.rs
