[package]
name = "alfred"
version = "0.2.0"
edition = "2024"
description = "A materials science visualization platform for atomistic simulation data"
license = "MIT"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "bevy_state",
    "bevy_ui",
    "x11",
    "wayland",
    "tonemapping_luts",
    "default_font",
] }
bevy_egui = "0.33"
nalgebra = "0.33"
encoding_rs = "0.8"
memchr = "2"
flate2 = "1"
indexmap = "2"
ndarray = "0.16"
quick-xml = { version = "0.37", features = ["encoding"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spglib = "1.15"
thiserror = "2"

# Fast dev builds: optimize deps but not our code
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Lean release builds
[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
